--- a/workspace.html
+++ b/workspace.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Friendgers</title>
     <script src="https://cdn.ckeditor.com/ckeditor5/29.0.0/classic/ckeditor.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link href="workspace.css" rel="stylesheet" type="text/css" />
 </head>
 <body style="background-color: #A4E4F4">
