Working on forgot password. Make sure all the changes are taken care of

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
 </head>
 
 <body style="background-color: #957DAD">
+<script type="text/javascript" src="script.js"></script>
 <div class="heading">
 <h2>Friendgers!</h2>
 </div>
 <div class="form">
 <center>
   <br>
-<form action="homepage.html" method="post">
+<form method="post" action="homepage.html">
 <h3>Login</h3> 
 <table>
 <tr>
@@ -37,7 +38,7 @@
 </tr>
 </table>
 <td>
-<button id="login"><a href="homepage.html">Login</a></button>
+<button id="login"><a href="homepage.html"></a> Login</button> 
 </td>
 </form>
 </center>
