--- a/forgotPassword.html
+++ b/forgotPassword.html
@@ -7,7 +7,7 @@
 
 <body style="background-color:#EDCCB6">
 <center>
-<h2>Enter your friend's userid:</h2> 
+<h2>Forgot Password ?</h2> 
 <div class="form">
 <form action="homepage.html" method="post">
 <table>
@@ -17,9 +17,12 @@
 <input id="username" type="text" placeholder="Name"/>
 </td>
 </tr>
-<td id="invite">
-  Not a member?<a href="index.html"> Send an invite !</a>
+<tr>
+<td id="em">Email:</td>
+<td>
+<input id="email" type="email" placeholder="someone@example.com"/>
 </td>
+</tr>
 </table>
 <button id="back"> <a href="homepage.html"> Back </a> </button>
 <button id="submit" onclick="serach()"> Submit</button> 
